kubernetes/affine/affine-basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: affine-basic-auth
  namespace: affine
spec:
  basicAuth:
    secret: affine-basic-auth
