kubernetes/affine/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: affine
spec:
  selector:
    service: redis
  ports:
    - port: 6379
      targetPort: 6379
