kubernetes/affine/affine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affine
  namespace: affine
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: affine-affine-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - affine.gbone.one
      secretName: affine-tls-secret
  rules:
    - host: affine.gbone.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: affine
                port:
                  number: 80
